# video-bot

./: .env  .gitignore  .replit  README.md  deploy.sh  pyproject.toml  replit.md  requirements.txt
src/: bot.py  database.py  downloader.py
