[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=25.1.0",
    "aiohttp>=3.13.3",
    "aiohttp-socks>=0.11.0",
    "pysocks>=1.7.1",
    "pytelegrambotapi>=4.31.0",
    "python-dotenv>=1.2.1",
    "requests[socks]>=2.32.5",
    "yt-dlp>=2026.2.4",
]
